Update lab2 with executable jar, plus other lab updates